
Changes in version 1.6 (Aug 2014)

  * Argument label.pos now defaults to c(.5, .5) for x,y
  positioning. (Request of Evan Williams).

  * New argument 'cor.type'. (Request of Evan Williams).

  * Added vignette.

Changes in version 1.5 (Aug 2013)

  * Update references links.  (Request of Michael Friendly).

  * Small bug with test for correlation matrix (Reported by F. Rosa)

Changes in version 1.4 (Nov 2012)

  * Panel colors are now specified via a 'col.regions' argument.  The old
    method of using 'col.corrgram' is ignored. Could cause slight
    incompatability.

  * Re-worked examples section for more variety.

Changes in version 1.3 (Aug 2012)

  * Added 'panel.bar'.  (Request of dadrivr)

  * Added example for unclipped labels (in the test suite).

Changes in version 1.2

  * Small bug.  Now accepts NA values in correlation matrices, and
    NAs caused by missing combinations of data and cor( use="pair").
    Added to test suite.

  * Non-numeric columns in the data will be ignored. (Request of JZ)

  * New panel function panel.density

  * Test suite now includes corrgram of inverse correlation, partial
    correlation matrices.

Changes in version 1.1

  * Added namespace.

Changes in version 1.0

  * New panel function 'panel.conf'
  * New data set 'vote'
  * New function arguments 'dir' (alternative to 'row1attop'), 'type',
  'label.srt', 'title', 'abs'.
  * Now works for either a data.frame or a correlation matrix using the
	'type' argument.  Panel functions need a 'corr' argument.
  * New ordering method 'OLO' using 'seriation' package.
  * Ordering can now be done on absolute value of correlations.
  * Fixed bug: Strongly negative correlations used no color.

Changes in version 0.1 (Nov 2006)

  * First release to CRAN.

Changes in version 0.0  (Apr 2006)

  * Package development begins 2006-04-16.