@@ -1,13 +1,15 @@
 Package: corrgram
 Type: Package
 Title: Plot a correlogram
-Version: 1.5
-Date: 2013-08-29
+Version: 1.6
+Date: 2014-08-28
 Author: Kevin Wright
 Maintainer: Kevin Wright <kw.stat@gmail.com>
 Description: Calculates correlation of variables and displays the results graphically.
-Depends: graphics, seriation, stats
+Imports: graphics, seriation, stats
+Suggests: knitr, Matrix
 License: GPL-2
 LazyData: yes
-
-
+URL: https://github.com/kwstat/corrgram
+BugReports: https://github.com/kwstat/corrgram/issues/
+VignetteBuilder: knitr
