@@ -1,8 +1,7 @@
-% custom_corrgram.rnw
-% Time-stamp: c:/x/rpack/corrgram/vignettes/custom_corrgram.rnw
+% corrgram_examples.Rnw
+% Time-stamp: <26 Nov 2014 09:13:17 c:/x/rpack/corrgram/vignettes/corrgram_examples.rnw>
 
 % \VignetteIndexEntry{Customizing corrgram}
-% \VignettePackage{corrgram}
 % \VignetteEngine{knitr::knitr}
 
 \documentclass[12pt]{article}
@@ -29,8 +28,8 @@
 \newcommand{\code}[1]{\texttt{\textcolor{darkred}{#1}}}
 
 % Define myTitle to be the title of the document
-\let\oldTitle\title
-\renewcommand{\title}[1]{\newcommand{\myTitle}{#1}\oldTitle{\sf #1}}
+%\let\oldTitle\title
+%\renewcommand{\title}[1]{\newcommand{\myTitle}{#1}\oldTitle{\sf #1}}
 
 % Header & footer
 \usepackage{fancyhdr}
@@ -38,7 +37,7 @@
 \renewcommand{\headrule}{}  % no line between header and body
 \renewcommand{\footrule}{}  % no line between body and footer
 \fancyhf{} % clear header and footer fields
-\fancyfoot[L]{\small \color{lightgray} \myTitle} % \FileName
+%\fancyfoot[L]{\small \color{lightgray} \myTitle} % \FileName
 \fancyfoot[R]{\small \thepage}
 
 \usepackage[round]{natbib}
@@ -54,7 +53,7 @@
 
 \begin{document}
 
-\title{Customizing the \textbf{corrgram} function}
+\title{Examples for the \textbf{corrgram} package}
 \author{Kevin Wright}
 \maketitle
 \thispagestyle{fancy}
@@ -62,10 +61,9 @@
 % Setup stuff.
 <<setup, echo=FALSE, results="hide">>=
 library("knitr")
-opts_chunk$set(fig.path="figs/ag-", fig.align="center",
+opts_chunk$set(fig.align="center",
   fig.width=7, fig.height=7)
 options(width=90)
-if(!file.exists("figs")) dir.create("figs")
 @
 
 % ----------------------------------------------------------------------------
@@ -81,7 +79,7 @@ Friendly, Michael.  2002.  Corrgrams: Exploratory Displays for Correlation
 
 Load the package.
 <<>>=
-library(corrgram)
+library("corrgram")
 @
 
 Figure 2
@@ -145,7 +143,6 @@ rinv <- function(r){
 vars7 <- c("Years", "logSal", "Homer", "Putouts", "RBI", "Walks",
            "Runs", "Hits", "Atbat", "Errors", "Assists")
 cb <- cor(baseball[,vars7], use="pair")
-require(graphics)
 corrgram(-rinv(cb), main=expression(paste("Baseball data ", R^-1)))
 
 @
@@ -178,8 +175,6 @@ corrgram(auto.par, lower.panel=panel.pie, upper.panel=panel.pie,
          main="Auto data, partialing out Price,MPG")
 @
 
-Figure 9
-
 Figure 11
 <<>>=
 corrgram(baseball[,vars2], order=TRUE,
@@ -191,8 +186,6 @@ corrgram(baseball[,vars2], order=TRUE,
 \section*{Appendix}
 This document was prepared \today with the following configuration:
 <<finish, echo=FALSE, results="asis">>=
-knit_hooks$set(output = function(x, options) { x })
 toLatex(sessionInfo(), locale=FALSE)
 @
-\bibliography{agridat}
 \end{document}
